--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "stdio.h": "c",
         "unistd.h": "c",
-        "wait.h": "c"
+        "wait.h": "c",
+        "fstream": "cpp",
+        "istream": "cpp",
+        "string": "cpp"
     }
 }
